# alphai

./: 404.html  CNAME  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publihs_pypi.yml  publish_pypi.yml
api-reference/alphai/: index.html
authentication/: index.html
benchmarking/: index.html
blog/: index.html
docker/: README.md
docker/devel/: Dockerfile.cuda12.2.2-devel-ubuntu22.04-py3.10  Dockerfile.cuda12.3.2-devel-ubuntu22.04-py3.11
docker/runtime/: Dockerfile.cuda12.2.2-runtime-ubuntu22.04-py3.10  Dockerfile.cuda12.3.2-runtime-ubuntu22.04-py3.11
docs/: authentication.md  benchmarking.md  getting-started.md  gpu-profiling.md  index.md  installation.md  lab-servers.md
docs/api-reference/: alphai.md
docs/models/: hugging-face.md
docs/overrides/: home.html  main.html
gpu-profiling/: index.html
installation/: index.html
lab-servers/: index.html
models/hugging-face/: index.html
notebooks/: test.py
notebooks/benchmarking/: Benchmarking.ipynb
notebooks/getting-started/: Getting Started.ipynb
notebooks/gpu-profiling-analysis/: Profiling GPU.ipynb
notebooks/models/: Hugging Face.ipynb
notebooks/servers/: Lab Servers.ipynb
overrides/: home.html  main.html
search/: search_index.json
src/alphai/: __init__.py  alphai.py  util.py
src/alphai/benchmarking/: benchmarker.py
src/alphai/client/: client.py
src/alphai/profilers/: configs_base.py  jax.py  pytorch.py  pytorch_utils.py
