[tool.poetry]
name = "alphai"
version = "0.0.6"
description = ""
authors = ["Andrew Chang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
jh-client = "^1.3.0"
nbserv-client = "^1.4.0"
python-dotenv = "^1.0.0"
wget = "^3.2"
transformers = "^4.35.2"
openai = "^1.3.5"
gradio = "^4.14.0"
datasets = "^2.16.1"
holistictraceanalysis = "^0.2.0"
torch = {version = "2.*", optional = true}
torchvision = {version = "0.*", optional = true}
torchaudio = {version = "2.*", optional = true}
jupyter = {version = "^1.0.0", optional = true}
jupyterlab = {version = "^4.0.9", optional = true}
matplotlib = {version="^3.8.2", optional = true}
mkdocs = {version = "^1.5.3", optional = true}
mkdocs-material = {version = "^9.4.12", optional = true}
mkdocstrings = {version = "^0.18.0", optional = true}
mkdocs-minify-plugin = {version = "^0.7.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.11.0"

[tool.poetry.extras]
torch = ["torch", "torchvision", "torchaudio"]
jupyter = ["jupyter", "jupyterlab", "matplotlib"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-minify-plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

